--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
 								class="form-control"
 								id="firstname"
 								name="firstname"
-								placeholder="enter first name"
+								placeholder="Type your first name"
 							/>
 						</div>
 
@@ -78,7 +78,7 @@
 								class="form-control"
 								id="lastname"
 								name="lastname"
-								placeholder="enter last name"
+								placeholder="Type your last name"
 							/>
 						</div>
 
@@ -89,26 +89,26 @@
 								class="form-control"
 								id="email"
 								name="email"
-								placeholder="enter email"
+								placeholder="Type your email"
 							/>
 						</div>
 
 						<div class="form-group mt-4">
-							<label for="place">Phone</label>
+							<label for="place">Phone Number</label>
 							<input
 								type="number"
 								class="form-control"
 								id="phone"
 								name="phone"
-								placeholder="enter phone number"
+								placeholder="Type phone number"
 							/>
 						</div>
 
 						<div class="col-sm-10">
-							<small id="emailHelp" class="form-text text-muted my-3">
+							<cite><small id="emailHelp" class="form-text text-muted my-3">
 								Please note, We'll never share your personal data or details with anyone
 								else.
-							</small>
+							</small></cite>
 						</div>
 
 						<div class="row justify-content-center my-4">
